"cannot play from vevo in facebook"

--- a/views/index.erb
+++ b/views/index.erb
@@ -27,7 +27,7 @@
 
     <script type="text/javascript" src="/javascripts/jquery-1.7.1.min.js"></script>
    
-    <iframe class="youtube-player" type="text/html" width="640" height="385" src="http://www.youtube.com/embed/JF8BRvqGCNs" allowfullscreen frameborder="0">
+    <iframe class="youtube-player" type="text/html" width="640" height="385" src="http://www.youtube.com/embed/G2PakaClWaE" allowfullscreen frameborder="0">
     </iframe>
 
     <script type="text/javascript">
